--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -210,7 +210,13 @@
 	Cusco Sky table styles
 	written by Braulio Soncco http://www.buayacorp.com
 */
-/* line 183, ../../../app/stylesheets/site.scss */
+/* line 182, ../../../app/stylesheets/site.scss */
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 186, ../../../app/stylesheets/site.scss */
 table, th, td {
   /*border: 1px solid #D4E0EE;*/
   border-collapse: collapse;
@@ -218,19 +224,19 @@ table, th, td {
   color: #555;
 }
 
-/* line 190, ../../../app/stylesheets/site.scss */
+/* line 193, ../../../app/stylesheets/site.scss */
 caption {
   font-size: 150%;
   font-weight: bold;
   margin: 5px;
 }
 
-/* line 196, ../../../app/stylesheets/site.scss */
+/* line 199, ../../../app/stylesheets/site.scss */
 td, th {
   padding: 4px;
 }
 
-/* line 200, ../../../app/stylesheets/site.scss */
+/* line 203, ../../../app/stylesheets/site.scss */
 thead th {
   border-bottom: 1px solid #D4E0EE;
   text-align: left;
@@ -239,46 +245,46 @@ thead th {
   font-size: 100% !important;
 }
 
-/* line 208, ../../../app/stylesheets/site.scss */
+/* line 211, ../../../app/stylesheets/site.scss */
 tbody th {
   font-weight: bold;
 }
 
-/* line 212, ../../../app/stylesheets/site.scss */
+/* line 215, ../../../app/stylesheets/site.scss */
 tbody tr {
   background: #FCFDFE;
   border-bottom: 1px solid #D4E0EE;
 }
 
-/* line 217, ../../../app/stylesheets/site.scss */
+/* line 220, ../../../app/stylesheets/site.scss */
 tbody tr.odd {
   background: #F7F9FC;
 }
 
-/* line 219, ../../../app/stylesheets/site.scss */
+/* line 222, ../../../app/stylesheets/site.scss */
 table a:link {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 224, ../../../app/stylesheets/site.scss */
+/* line 227, ../../../app/stylesheets/site.scss */
 table a:visited {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 229, ../../../app/stylesheets/site.scss */
+/* line 232, ../../../app/stylesheets/site.scss */
 table a:hover {
   color: #718ABE;
   text-decoration: underline !important;
 }
 
-/* line 234, ../../../app/stylesheets/site.scss */
+/* line 237, ../../../app/stylesheets/site.scss */
 tfoot th, tfoot td {
   font-size: 85%;
 }
 
-/* line 239, ../../../app/stylesheets/site.scss */
+/* line 242, ../../../app/stylesheets/site.scss */
 .shadow1 {
   box-shadow: 5px 5px #818181;
   -webkit-box-shadow: 5px 5px #818181;
@@ -291,7 +297,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 251, ../../../app/stylesheets/site.scss */
+/* line 254, ../../../app/stylesheets/site.scss */
 .shadow {
   box-shadow: 7px 7px 8px #818181;
   -webkit-box-shadow: 7px 7px 8px #818181;
@@ -304,7 +310,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 262, ../../../app/stylesheets/site.scss */
+/* line 265, ../../../app/stylesheets/site.scss */
 #tearshape {
   background: #f1f2f3;
   padding: 3px 5px;
@@ -317,7 +323,7 @@ tfoot th, tfoot td {
   -webkit-border-bottom-right-radius: 9px;
 }
 
-/* line 273, ../../../app/stylesheets/site.scss */
+/* line 276, ../../../app/stylesheets/site.scss */
 #roundshape {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -329,7 +335,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 285, ../../../app/stylesheets/site.scss */
+/* line 288, ../../../app/stylesheets/site.scss */
 .round {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -338,14 +344,14 @@ tfoot th, tfoot td {
   -webkit-border-radius: 5px;
 }
 
-/* line 293, ../../../app/stylesheets/site.scss */
+/* line 296, ../../../app/stylesheets/site.scss */
 .curlycontainer {
   border: 1px solid #b8b8b8;
   margin-bottom: 1em;
   width: 300px;
 }
 
-/* line 299, ../../../app/stylesheets/site.scss */
+/* line 302, ../../../app/stylesheets/site.scss */
 .curlycontainer .innerdiv {
   background: transparent url(brcorner.gif) bottom right no-repeat;
   position: relative;
@@ -354,7 +360,7 @@ tfoot th, tfoot td {
   padding: 1px 4px 15px 5px;
 }
 
-/* line 307, ../../../app/stylesheets/site.scss */
+/* line 310, ../../../app/stylesheets/site.scss */
 .bordershape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -363,12 +369,12 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 314, ../../../app/stylesheets/site.scss */
+/* line 317, ../../../app/stylesheets/site.scss */
 .bordershape a {
   text-decoration: none;
 }
 
-/* line 317, ../../../app/stylesheets/site.scss */
+/* line 320, ../../../app/stylesheets/site.scss */
 .solidshape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -377,7 +383,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 325, ../../../app/stylesheets/site.scss */
+/* line 328, ../../../app/stylesheets/site.scss */
 .fullshape {
   font-size: 14px;
   text-align: center;
@@ -394,7 +400,7 @@ tfoot th, tfoot td {
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 340, ../../../app/stylesheets/site.scss */
+/* line 343, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px auto;
   background-color: white;
@@ -410,14 +416,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 349, ../../../app/stylesheets/site.scss */
+/* line 352, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 350, ../../../app/stylesheets/site.scss */
+/* line 353, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -425,14 +431,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 351, ../../../app/stylesheets/site.scss */
+/* line 354, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 352, ../../../app/stylesheets/site.scss */
+/* line 355, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -441,7 +447,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 359, ../../../app/stylesheets/site.scss */
+/* line 362, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -449,7 +455,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 365, ../../../app/stylesheets/site.scss */
+/* line 368, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -459,13 +465,13 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 366, ../../../app/stylesheets/site.scss */
+/* line 369, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
 
 /* table sorter style */
-/* line 369, ../../../app/stylesheets/site.scss */
+/* line 372, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .header {
   /*background-image: url(/images/bg.gif);*/
   background-repeat: no-repeat;
@@ -473,23 +479,23 @@ table.tablesorter thead tr .header {
   cursor: pointer;
 }
 
-/* line 375, ../../../app/stylesheets/site.scss */
+/* line 378, ../../../app/stylesheets/site.scss */
 table.tablesorter tbody tr:hover {
   /*background: #dfeef9;*/
   background: #e6edf5;
 }
 
-/* line 379, ../../../app/stylesheets/site.scss */
+/* line 382, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortUp {
   background-image: url(/images/asc.gif);
 }
 
-/* line 382, ../../../app/stylesheets/site.scss */
+/* line 385, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortDown {
   background-image: url(/images/desc.gif);
 }
 
-/* line 385, ../../../app/stylesheets/site.scss */
+/* line 388, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
   padding-right: 20px;
   background-color: #a3c0ea;
