--- a/public/stylesheets/fmenu.css
+++ b/public/stylesheets/fmenu.css
@@ -8,7 +8,8 @@ p { line-height:18px; }
 
 #info { margin:auto; width:600px; color:#333333; padding:10px; background:#f4f4f4; border:1px solid #DDD; }
 */
-#nicemenu { margin:0 auto; width:95%; margin-top:0px; border-bottom:dotted 0px #0066cc; font-size: 15px; margin-right:60px;}
+/*#nicemenu { margin:0 auto; width:95%; margin-top:0px; border-bottom:dotted 0px #0066cc; font-size: 15px; margin-right:60px;}*/
+#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 0px #0066cc; font-size: 15px; }
 /*#nicemenu { margin:0 auto; width:100%; margin-top:0px; border-bottom:dotted 1px #E5E5E5; font-size: 18px; background: #3b69b1; }/*#3b69b1;}*/
 /*#nicemenu a { color:#0066CC; text-decoration:none; }*/
 #nicemenu a { color:white; background-color:#0066cc; text-decoration:none; }
@@ -40,3 +41,9 @@ p { line-height:18px; }
 #nicemenu div.sub_menu a:hover{ display:block; font-size:16px; padding:4px; color:#0066cc; background-color:white; text-align:left;}	
 #nicemenu a.item_line { border-top:solid 1px #E5E5E5; padding-top:6px !important; margin-top:3px; }
 
+#nicemenu li span.short, #nicemenu li span.short a{ 
+  background-color: #999;
+}	
+#nicemenu li span.short a:hover { 
+  text-decoration:none; 
+}
