fix participant task bug, update task short cut

--- a/app/views/board/accountlogs.html.haml
+++ b/app/views/board/accountlogs.html.haml
@@ -19,11 +19,11 @@
 - form_tag :controller => 'board', :action => 'search_account_log' do
   .solidshape
     = t 'global.from'
-    = text_field_tag 'from', '', {:size=>10, :class => 'validate[required]'}
+    = text_field_tag 'from', session[:from], {:size=>10, :class => 'validate[required]'}
     = t 'global.to'
-    = text_field_tag 'to', '', {:size=>10, :class => 'validate[required]'}
+    = text_field_tag 'to', session[:to], {:size=>10, :class => 'validate[required]'}
     = label_tag t 'site.login_name'
-    = search_field_tag 'username', ''
+    = search_field_tag 'username', session[:username]
     = submit_tag t('global.show')
     = link_to image_tag('save_01.png')+t('global.export'), '/t/export_accountlog'
 
