--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -17,6 +17,20 @@
         $("#task_custom_judge_content_input").hide('fast');
       }
      });
+
+    $("#task_custom_msg").each(function() {
+     this.checked = false;
+    });
+    $("#task_custom_msg_content_input").hide('fast');
+    $("#task_custom_msg").click(function() {
+      if(this.checked) {
+        $("#task_custom_msg_content_input").show('fast');
+      }
+      else {
+        $("#task_custom_msg_content_input").hide('fast');
+      }
+     });
+
     $("#virtual").each(function() {
      this.checked = false;
     });
@@ -69,9 +83,16 @@
     %span{:style=>'color:red'}= "10天(-0.1), 20天(-0.2), 30天(-0.3), 40天(-0.4), 50天(-0.5), 60天(-0.6) 依次递增"
     = f.input :avoid_day, :as => :select, :collection => [0,10,20,30,40,50,60], :input_html => { :class => "validate[required]" }
 
+    %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.all_star
+    = f.input :all_star
+
     %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_judge
     = f.input :custom_judge
     = f.input :custom_judge_content, :as => :text
+
+    %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_msg
+    = f.input :custom_msg
+    = f.input :custom_msg_content, :as => :text
     %hr
 
     = f.commit_button t('site.new_task')
